# AutoGrad

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Tensor.h
include/model/: ActivateFun.h  Convolution.h  LinearLayer.h  LossFun.h  Model.h
include/operator/: ConvToImgOperator.h  DotOperator.h  ImgToConvOperator.h  MaxPoolOperator.h  ResizeOperator.h  TransposeOperator.h
include/optimizer/: AdamOptimizer.h  Optimizer.h  SGDOptimizer.h
src/: Tensor.cpp
src/model/: ActivateFun.cpp  Convolution.cpp  LinearLayer.cpp  LossFun.cpp  Model.cpp
src/operator/: AddOperator.cpp  ConvToImgOperator.cpp  DotOperator.cpp  ImgToConvOperator.cpp  LogOperator.cpp  MaxPoolOperator.cpp  MulOperator.cpp  ResizeOperator.cpp  SubOperator.cpp  TransposeOperator.cpp
src/optimizer/: AdamOptimizer.cpp  Optimizer.cpp  SGDOptimizer.cpp
